--- a/04_FedorovaL_VcfGeneration.ipynb
+++ b/04_FedorovaL_VcfGeneration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,9 +60,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/kt/qf89bw917mg3nhrtrkj4_lmc0000gn/T/ipykernel_11262/3514830366.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  bed_tmp_hg19['CHROM_hg19'] = bed_tmp_hg19['CHROM_hg19'].replace('CHR','chr', regex=True)\n",
+      "/var/folders/kt/qf89bw917mg3nhrtrkj4_lmc0000gn/T/ipykernel_11262/3514830366.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  bed_tmp_hg19['POS0_hg19'] = bed_tmp_hg19['POS_hg19'] - 1\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate BED file for coordinate lift-over\n",
     "bed_tmp_hg19 = hg19[['CHROM_hg19','POS_hg19','ID']]\n",
@@ -72,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,46 +124,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "77820"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "imported_bed_hg38.shape[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "77796"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "bed_hg38.shape[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Join columns of interest in hg19 dataframe \n",
-    "merged_hg38_hg19 = pd.merge(bed_hg38, hg19[['ID','REF','ALT','QUAL','INFO']], on='ID')\n",
+    "merged_hg38_hg19 = pd.merge(bed_hg38, hg19[['ID','REF','ALT','QUAL','FILTER','INFO']], on='ID')\n",
     "merged_hg38_hg19['#CHROM'] = merged_hg38_hg19['#CHROM'].replace('chr','',regex=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Generate ARSA AFR .tsv for hg38\n",
-    "ARSAtableAFR_hg38 = merged_hg38_hg19[['#CHROM','POS','ID','REF','ALT','QUAL','INFO']]"
+    "ARSAtableAFR_hg38 = merged_hg38_hg19[['#CHROM','POS','ID','REF','ALT','QUAL','FILTER','INFO']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,15 +217,15 @@
     "\n",
     "O.write(\"##fileformat=VCFv4.0\\n\")\n",
     "O.write(\"##FILTER=<ID=ID,Number=1,Type=String,Description=\\\"dbSnp id\\\">\\n\")\n",
-    "O.write(\"##INFO=<ID=Simons_AFR,Number=1,Type=String,Description=\\\"Number of counts in African populations in the Simon's dataset\\\">\\n\")\n",
-    "O.write(\"##INFO=<ID=Simons_OTHER1,Number=1,Type=String,Description=\\\"Number of counts in other population (1) in the Simon's dataset\\\">\\n\")\n",
-    "O.write(\"##INFO=<ID=Simons_OTHER2,Number=1,Type=String,Description=\\\"Number of counts in other population (2) in the Simon's dataset\\\">\\n\")\n",
-    "O.write(\"##INFO=<ID=Simons_OTHER3,Number=1,Type=String,Description=\\\"Number of counts in other population (3) in the Simon's dataset\\\">\\n\")\n",
-    "O.write(\"##INFO=<ID=1000Gp3_AFR,Number=1,Type=String,Description=\\\"Number of counts in African populations in the 1000Genomes phase3 dataset\\\">\\n\")\n",
-    "O.write(\"##INFO=<ID=1000Gp3_EUR,Number=1,Type=String,Description=\\\"Number of counts in European populations in the 1000Genomes phase3 dataset\\\">\\n\")\n",
-    "O.write(\"##INFO=<ID=1000Gp3_EAS,Number=1,Type=String,Description=\\\"Number of counts in East Asian populations in the 1000Genomes phase3 dataset\\\">\\n\")\n",
-    "O.write(\"##INFO=<ID=1000Gp3_AMR,Number=1,Type=String,Description=\\\"Number of counts in American populations in the 1000Genomes phase3 dataset\\\">\\n\")\n",
-    "O.write(\"##INFO=<ID=1000Gp3_SAS,Number=1,Type=String,Description=\\\"Number of counts in South Asian populations in the 1000Genomes phase3 dataset\\\">\\n\")\n",
+    "O.write(\"##INFO=<ID=Simons_AFR,Number=A,Type=Integer,Description=\\\"Number of counts in African populations in the Simon's dataset\\\">\\n\")\n",
+    "O.write(\"##INFO=<ID=Simons_OTHER1,Number=A,Type=Integer,Description=\\\"Number of counts in other population (1) in the Simon's dataset\\\">\\n\")\n",
+    "O.write(\"##INFO=<ID=Simons_OTHER2,Number=A,Type=Integer,Description=\\\"Number of counts in other population (2) in the Simon's dataset\\\">\\n\")\n",
+    "O.write(\"##INFO=<ID=Simons_OTHER3,Number=A,Type=Integer,Description=\\\"Number of counts in other population (3) in the Simon's dataset\\\">\\n\")\n",
+    "O.write(\"##INFO=<ID=1000Gp3_AFR,Number=A,Type=Integer,Description=\\\"Number of counts in African populations in the 1000Genomes phase3 dataset\\\">\\n\")\n",
+    "O.write(\"##INFO=<ID=1000Gp3_EUR,Number=A,Type=Integer,Description=\\\"Number of counts in European populations in the 1000Genomes phase3 dataset\\\">\\n\")\n",
+    "O.write(\"##INFO=<ID=1000Gp3_EAS,Number=A,Type=Integer,Description=\\\"Number of counts in East Asian populations in the 1000Genomes phase3 dataset\\\">\\n\")\n",
+    "O.write(\"##INFO=<ID=1000Gp3_AMR,Number=A,Type=Integer,Description=\\\"Number of counts in American populations in the 1000Genomes phase3 dataset\\\">\\n\")\n",
+    "O.write(\"##INFO=<ID=1000Gp3_SAS,Number=A,Type=Integer,Description=\\\"Number of counts in South Asian populations in the 1000Genomes phase3 dataset\\\">\\n\")\n",
     "O.write(\"##FORMAT=<ID=NO,Number=1,Type=String,Description=\\\"Not used\\\">\\n\")\n",
     "\n",
     "for iLine in I:\n",
